# docs

./: .gitignore  README.md  Taskfile.yml  lychee.toml
.github/ISSUE_TEMPLATE/: new_issue.yml
.github/workflows/: links.yml  pr-links.yml  reusable-docs.yml
docs/: .index  conf.py  genindex.html  index.md  index.rst  requirements.txt  search.html
docs/agws/: .index  workflow-server-manager.md  workflow-server.md
docs/csit/: .index  csit.md
docs/dir/: .index  dir-record-example.md  directory-cli.md  hosted-agent-directory.md  overview.md  scenarios.md
docs/how-to-guides/: .index  agent-directory.md  agent-record-guide.md  bridge-howto.md  data-model-guide.md  identity-quickstart.md  interrupts.md  slim-howto.md  thread.md
docs/identity/: .index  credentials.md  flow.md  identifiers.md  identity.md
docs/manifest/: .index  manifest-structure.md  manifest.md
docs/messaging/: .index  slim-core.md  slim-data-plane.md  slim-mcp.md
docs/oasf/: .index  model.proto.md  oasf-data-model.md  oasf-server.md  open-agentic-schema-framework.md  workflow.md
docs/pages/: abstract.md  agent-deployment.md  agent_directory.md  agntcy_acp_sdk.md  composer.html  connect.html  connect.md  csit.md  data_model.html  data_model_extensions.html  data_model_services.html  dir-howto.md  dir.md  evaluation.html  gateway.html  hub.md  introduction.html  introduction.md  manifest.md  oasf.md  oasf_workflow.md  observability.html  taxonomy.html  workflow.md  (+2 more)
html/: .buildinfo  index.html  objects.inv  searchindex.js
mkdocs/: mkdocs.yml  pyproject.toml
mkdocs/overrides/: home.html
(+50 files in other folders)
