[project]
name = "agntcy-docs"
version = "0.1.0"
description = "Agntcy documentation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mkdocs-material==9.6.12",
    "mkdocs-exclude==1.0.2",
    "mkdocs-awesome-pages-plugin==2.10.1",
    "markdown>=3.2",
    "mkdocs>=1.3.0",
    "mkdocs-material-extensions>=1.0.3",
    "mkdocs-autorefs==1.4.1",
    "pygments>=2.12",
    "pymdown-extensions>=9.4",
    "mkdocs-git-revision-date-plugin==0.3.2",
    "mkdocstrings-python==1.16.10",
    "griffe-pydantic==1.1.4",
    "griffe==1.7.2",
    "agntcy-acp==1.1.2",
    "agntcy-iomapper==0.2.2"
]
